<resources>
    <string name="app_name">Kawaishi Ryu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">El Pug1​ (también conocido como carlino o doguillo)2​ es una raza de perro con origen histórico en China, pero con el patrocinio del Reino Unido. Se trata de un perro pequeño de tipo molosoide. En una encuesta realizada en 2012-2013 por la Federación Cinológica Internacional (FCI), el pug resultó ser una de las treinta razas más populares del mundo.3​El Pug1​ (también conocido como carlino o doguillo)2​ es una raza de perro con origen histórico en China, pero con el patrocinio del Reino Unido. Se trata de un perro pequeño de tipo molosoide. En una encuesta realizada en 2012-2013 por la Federación Cinológica Internacional (FCI), el pug resultó ser una de las treinta razas más populares del mundo.3​El Pug1​ (también conocido como carlino o doguillo)2​ es una raza de perro con origen histórico en China, pero con el patrocinio del Reino Unido. Se trata de un perro pequeño de tipo molosoide. En una encuesta realizada en 2012-2013 por la Federación Cinológica Internacional (FCI), el pug resultó ser una de las treinta razas más populares del mundo.3​El Pug1​ (también conocido como carlino o doguillo)2​ es una raza de perro con origen histórico en China, pero con el patrocinio del Reino Unido. Se trata de un perro pequeño de tipo molosoide. En una encuesta realizada en 2012-2013 por la Federación Cinológica Internacional (FCI), el pug resultó ser una de las treinta razas más populares del mundo.3​El Pug1​ (también conocido como carlino o doguillo)2​ es una raza de perro con origen histórico en China, pero con el patrocinio del Reino Unido. Se trata de un perro pequeño de tipo molosoide. En una encuesta realizada en 2012-2013 por la Federación Cinológica Internacional (FCI), el pug resultó ser una de las treinta razas más populares del mundo.3​</string>
    <string name="comenzemos">Comenzemos!</string>
    <string name="frase_registro">Crea una cuenta y adentrate en el mundo del jiu jutsu</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="jiu_jitsu_historia">Jiu-Jitsu Tradicional: El jiu-jitsu tradicional, también conocido como jujutsu o jiu-jitsu japonés, es un antiguo arte marcial japonés que se enfoca en las técnicas de autodefensa y combate cuerpo a cuerpo. A diferencia del Brazilian Jiu-Jitsu (BJJ), que se ha desarrollado en Brasil y se centra en el combate en el suelo, el jiu-jitsu tradicional abarca una gama más amplia de técnicas que incluyen lanzamientos, bloqueos articulares, estrangulaciones y golpes. Principios Básicos del Jiu-Jitsu Tradicional: Técnicas de Lanzamiento: El jiu-jitsu tradicional incluye una variedad de técnicas de lanzamiento y derribo diseñadas para desequilibrar y arrojar a tu oponente al suelo. Bloqueos Articulares: Se enseñan técnicas de bloqueo articular que permiten controlar y someter a tu oponente al aplicar presión a las articulaciones, como muñecas, codos y rodillas. Estrangulaciones: Se practican técnicas de estrangulación que buscan sofocar al oponente al aplicar presión sobre su cuello, lo que puede llevarlo a rendirse. Golpes y Patadas: Aunque no es el enfoque principal, el jiu-jitsu tradicional también incluye algunas técnicas de golpes y patadas que se pueden usar en situaciones de combate. Defensa Personal: El jiu-jitsu tradicional se considera una forma efectiva de defensa personal, ya que enseña cómo enfrentar y neutralizar a un oponente en situaciones de peligro. Randori: Similar al sparring en BJJ, en el jiu-jitsu tradicional, se realizan ejercicios de randori, que son enfrentamientos controlados con múltiples oponentes para practicar las técnicas aprendidas en situaciones más realistas. En resumen, el jiu-jitsu tradicional es un arte marcial japonés que abarca una amplia gama de técnicas, incluyendo lanzamientos, bloqueos articulares, estrangulaciones y golpes. Se centra en la autodefensa y el combate cuerpo a cuerpo, y es una disciplina marcial rica en historia y tradición.</string>

    <string name="Home_Judo_Def">La filosofía central del Judo se basa en utilizar la fuerza y ​​la energía del oponente en lugar de oponerse directamente a ella. El Judo se centra en proyecciones y derribos, así como en técnicas de control en el suelo.</string>
    <string name="Home_judo_1">Eficiencia en el uso de la fuerza: El Judo se destaca por su enfoque en la eficiencia y la economía de movimientos. Los practicantes aprenden a utilizar la fuerza del oponente en su propio beneficio, lo que permite a personas más pequeñas enfrentarse a oponentes más grandes.</string>
    <string name="Home_judo_2">Técnicas de proyección: Las técnicas de proyección (Nage-waza) son fundamentales en Judo. Estas técnicas permiten a los judokas derribar a sus oponentes al suelo con rapidez y control.</string>
    <string name="Home_judo_3">Énfasis en el trabajo en el suelo: El Judo incluye un extenso trabajo en el suelo, con énfasis en técnicas de control, estrangulaciones y luxaciones. Esto brinda a los judokas habilidades completas tanto de pie como en el suelo.</string>

    <string name="Home_Jiu_jitsu_def">El Jiu Jitsu, es un antiguo arte marcial japonés que se enfoca en el combate cuerpo a cuerpo y la defensa personal. A diferencia del Judo, el Jiu Jitsu tradicional incluye una variedad más amplia de técnicas, que van desde golpes y patadas hasta luxaciones y estrangulaciones.</string>
    <string name="Home_Jiu_jitsu_1">Versatilidad en Técnicas: El Jiu Jitsu tradicional abarca una amplia gama de técnicas que involucran golpes, patadas, luxaciones, estrangulaciones y técnicas de control en el suelo.</string>
    <string name="Home_Jiu_jitsu_2">Defensa Personal Integral: Al tener un repertorio más amplio de técnicas, el Jiu Jitsu tradicional se considera efectivo para la defensa personal en una variedad de situaciones, ya sea de pie o en el suelo.</string>
    <string name="Home_Jiu_jitsu_3">Énfasis en la Adaptabilidad: Aunque hay principios fundamentales, el Jiu Jitsu tradicional a menudo enfatiza la adaptabilidad a diferentes situaciones y estilos de oponentes.</string>

    <string name="Shisei_def">El SHISEI, o posturas del cuerpo, desempeña un papel crucial en el Jiu-Jitsu, estableciendo las bases para la eficacia, la movilidad y el equilibrio en cada encuentro. Vamos a explorar las distintas posturas que conforman este componente esencial:</string>
    <string name="SHINTAI_WAZA">SHINTAI WAZA es un componente esencial que permite a los practicantes moverse estratégicamente en el tatami. Estas técnicas son fundamentales para la movilidad y la transición entre diferentes posturas y posiciones durante el combate.</string>
    <string name="HAPPO_NO_SABAKI">HAPPO NO SABAKI representa un enfoque integral para la movilidad y la adaptabilidad en el tatami. Se basa en la idea de que un practicante de Jiu-Jitsu debe ser capaz de moverse en ocho direcciones diferentes, proporcionando una respuesta dinámica a cualquier situación de combate.</string>
    <string name="KAMAE">KAMAE es la postura fundamental que un practicante asume durante el enfrentamiento. Proporciona estabilidad, equilibrio y la capacidad de responder efectivamente a los movimientos del oponente.</string>
    <string name="KATA">KATA estas son formas estilizadas que presentan secuencias de movimientos y técnicas. Utilizadas para perfeccionar la ejecución de técnicas y comprender los principios fundamentales del Jiu-Jitsu.</string>
    <string name="UKE_WAZA">UKE WAZA son las habilidades de defensa y bloqueo utilizadas por el receptor en una interacción. Es crucial para resistir, redirigir o mitigar el impacto de las técnicas del oponente.</string>
    <string name="ATEMI_WAZA">ATEMI WAZA incluye diversas técnicas de golpeo que se aplican como parte integral del Jiu-Jitsu. Se dividen en categorías según la parte del cuerpo utilizada para el golpeo.</string>
    <string name="ATSU_KOMI_WAZA">se centra en aplicar presión sobre las articulaciones del oponente para limitar su movilidad o forzar una rendición.</string>
    <string name="YUBI_BASAMI_WAZA"> son las "técnicas de prensado con los dedos" y se centra en el uso de los dedos para controlar o bloquear las extremidades del oponente.</string>
    <string name="FUMI_WAZA">son las "técnicas de pisoteo," involucran el uso de los pies para aplicar presión o control sobre áreas específicas del cuerpo del oponente.</string>
    <string name="KANSETSU_WAZA">son las "técnicas de articulación," se centran en manipular las articulaciones del cuerpo del oponente para inducir dolor o forzar la rendición.</string>
    <string name="UKEMI_WAZA">Tecnicas de caída son fundamentales para aprender a caer de manera segura y controlada, minimizando el riesgo de lesiones durante la práctica o en situaciones de combate real.</string>


    <string name="KUMI_KATA">En el judo, "kumi kata" se refiere al agarre o la toma de agarre entre dos competidores. Es una parte crucial de la estrategia en el combate, ya que el modo en que los judokas se agarran mutuamente puede influir en su capacidad para ejecutar técnicas y proyecciones.</string>
    <string name="SHIME_WAZA">Estas técnicas se centran en la aplicación de fuerza para restringir la respiración y el flujo sanguíneo del oponente, buscando forzarlo a rendirse. Se utilizan principalmente en situaciones de combate cuerpo a cuerpo y son una parte integral de las estrategias defensivas y ofensivas.</string>
    <string name="NAGE_WAZA"> Estas técnicas se centran en proyectar al oponente al suelo mediante el uso de la fuerza y el equilibrio. El objetivo es desequilibrar al oponente y llevarlo al suelo de una manera controlada y eficiente. </string>
    <string name="OSEA_KOMI_WAZA">Estas técnicas están diseñadas para controlar al oponente en el suelo después de haber sido lanzado o derribado. El objetivo es mantener al oponente inmovilizado en el tatami (la estera de judo) durante un período de tiempo específico, lo que lleva a la victoria en un combate.</string>

    <string name="error_name_required">Debes colocar un nombre en la técnica</string>
    <string name="error_translation_required">Debes completar el campo de traducción</string>
    <string name="error_grado_required">Debes seleccionar una opción en grado de dificultad</string>

    <string name="success_register">Registro exitoso.</string>
    <string name="modified_succes">Modificacion exitosa.</string>

</resources>