<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.home.HomeFragment">

    <!-- AppBarLayout con CollapsingToolbarLayout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/Theme.KawaishiRyu.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardCornerRadius="16dp">

                    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                        android:id="@+id/carousel"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        app:autoPlay="true"
                        app:autoPlayDelay="4000"
                        app:autoWidthFixing="true"
                        app:captionMargin="0dp"
                        app:captionTextSize="14sp"
                        app:carouselBackground="#00000000"
                        app:carouselGravity="CENTER"
                        app:imageScaleType="fitCenter"
                        app:infiniteCarousel="true"
                        app:scaleOnScroll="true"
                        app:scalingFactor="0.15"
                        app:showCaption="true"
                        app:showNavigationButtons="false"
                        app:touchToPause="true" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/C2"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="346dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="
Bienvenido a nuestra plataforma, donde la destreza del Judo y la agudeza del Jiu Jitsu se unen para formar una experiencia única en el mundo de las artes marciales."
                            android:textColor="@color/C1"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Contenido que se desplaza debajo del CollapsingToolbarLayout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvJiujitsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/C7"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Jiu jitsu"
                        android:textColor="@color/C1"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Home_Jiu_jitsu_def"
                        android:textColor="@color/C6"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="15dp"/>

                    <LinearLayout
                        android:id="@+id/expansionLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 1 - "
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="@color/C1"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/Home_Jiu_jitsu_1"
                                android:textColor="@color/C6"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 2 - "
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="@color/C1"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/Home_Jiu_jitsu_2"
                                android:textColor="@color/C6"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 3 - "
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="@color/C1"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/Home_Jiu_jitsu_3"
                                android:textColor="@color/C6"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvMoreJiuJitsu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@color/C1"
                        android:text="Leer mas..." />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cvJudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/C7"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Judo"
                        android:textColor="@color/C1"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Home_Judo_Def"
                        android:textColor="@color/C6"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="15dp"/>

                    <LinearLayout
                        android:id="@+id/expansionLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 1 - "
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="@color/C1"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/Home_judo_1"
                                android:textColor="@color/C6"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 2 - "
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="@color/C1"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/Home_judo_2"
                                android:textColor="@color/C6"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" 3 - "
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="@color/C1"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/Home_judo_3"
                                android:textColor="@color/C6"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvMoreJudo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@color/C1"
                        android:text="Leer mas..." />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
